Configure python virtualenv in CI/CD

--- a/.github/workflows/terraform-CI.yml
+++ b/.github/workflows/terraform-CI.yml
@@ -46,6 +46,11 @@ jobs:
         with:
           terraform_wrapper: false
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
       # Prepare Python environment
       - name: Setup Python Environment
         run: make bootstrap
